--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -193,8 +193,8 @@
                     <StackPanel Orientation="Horizontal"  Height="105" Margin="280 5 0 0">
                         <StackPanel Orientation="Vertical">
                             <Label Content="Choose a Food Group:" FontSize="16" Width="185" Background="Orchid"/>
-                            <ComboBox Width="80" FontSize="16" SelectedIndex="0" Name="FilFoodGroup" Background="DimGray" BorderBrush="Black" BorderThickness="2">
-                                <ComboBoxItem>Filter</ComboBoxItem>
+                            <ComboBox Width="130" FontSize="16" SelectedIndex="0" Name="FilFoodGroup" Background="DimGray" BorderBrush="Black" BorderThickness="2">
+                                <ComboBoxItem>Food Groups</ComboBoxItem>
                                 <ComboBoxItem>Carbohydrates</ComboBoxItem>
                                 <ComboBoxItem>Vegetables and Fruits</ComboBoxItem>
                                 <ComboBoxItem>Protein</ComboBoxItem>
@@ -203,6 +203,7 @@
                                 <ComboBoxItem>Water</ComboBoxItem>
                                 <ComboBoxItem>Other</ComboBoxItem>
                             </ComboBox>
+                            <Button Content="Filter" Click="FilterForFood_Click" FontSize="16" Height="30" Width="50" Background="LightGray"/>
                         </StackPanel>
                         <StackPanel Orientation="Vertical" Margin="85 0 0 0">
                             <Label Content="Filtered Recipes by Food Group" Background="RosyBrown" BorderBrush="Black" BorderThickness="2"/>
