--- a/Part3/MainWindow.xaml
+++ b/Part3/MainWindow.xaml
@@ -31,7 +31,7 @@
                     <StackPanel Margin="180 30 0 0">
                         <Button Content="Filter Recipe" FontSize="18" Width="200" Height="40" Click="RecFilter_Click" BorderBrush="DarkSeaGreen" BorderThickness="4" Background="#FFF9F7F7" FontWeight="Bold"/>
                     </StackPanel>
-                    <TextBlock Margin="450 20 270 0" VerticalAlignment="Center" FontSize="20" Background="White">
+                    <TextBlock Margin="450 20 270 0" Width="80" VerticalAlignment="Center" FontSize="20" Background="White">
                         <Hyperlink NavigateUri="https://github.com/Zoe-Heyneke/Part3" RequestNavigate="Hyperlink_RequestNavigate">
                             GitHub
                         </Hyperlink>
